Adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,6 +9,8 @@
     <h1> Olá, Mundo!</h1>
     <hr>
     <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugiat magni molestias a explicabo aspernatur numquam nisi doloremque enim laborum mollitia, accusantium autem non sint animi ipsam maxime omnis adipisci sed.</p>
+    <hr>
+    <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum rerum nesciunt aspernatur soluta quasi animi necessitatibus sunt, odio suscipit tempora et veritatis earum iure dolores dolor nihil repellendus doloribus fugit!</p>
 
     
 </body>
